<resources>
    <string name="app_name">Geolocation</string>

    <string name="mapbox_access_token">pk.eyJ1IjoidGlhZ29wb3J0YWx1cHBpIiwiYSI6ImNrdG1hbGxwODIzd3cyd3FqYXY5Zm42eHIifQ.vO7A8THexQbmHXdnYbWRYw</string>
    <string name="mapbox_url">mapbox://styles/tiagoportaluppi/ckdth5i31070k19nrl71bidp4</string>
    <string name="google_web_client_id">347137225444-snppkceu3agnnv5rapkoecvvat665ioi.apps.googleusercontent.com</string>

    <string name="title_activity_record">Página inicial</string>
    <string name="title_activity_share_location">Encontre amigos</string>

    <string name="title_fragment_route">Atividades</string>
    <string name="title_fragment_record_bottom">Gravar</string>
    <string name="title_fragment_record">Gravar atividade</string>
    <string name="title_user">Perfil</string>
    <string name="title_friends">Amigos</string>
    <string name="title_user_profile">Editar Perfil</string>

    <string name="text_icon">Ícone</string>

    <string name="text_walking">Caminhada</string>
    <string name="content_image_walking">Ícone de caminhada</string>
    <string name="text_running">Corrida</string>
    <string name="content_image_running">Ícone de corrida</string>
    <string name="text_cycling">Ciclismo</string>
    <string name="content_image_cycling">Ícone de ciclismo</string>

    <string name="variable_walking">Walking</string>
    <string name="variable_running">Running</string>
    <string name="variable_cycling">Cycling</string>

    <string name="text_current_date">30/08/2020 13:50</string>
    <string name="text_default_time">00:00:00</string>
    <string name="text_default_elapsed_time">1 h. 10min.</string>
    <string name="text_default_distance">1,45</string>
    <string name="text_default_elapsed_distance">1,45 Km</string>
    <string name="text_unity_distance">Km</string>
    <string name="text_default_average_speed">10,00</string>
    <string name="text_default_elapsed_average_speed">10,00m/s</string>
    <string name="text_unity_average_speed">m/s</string>

    <string name="text_time">Tempo</string>
    <string name="text_distance">Distância</string>
    <string name="text_average_speed">Vel. Atual</string>

    <string name="text_visualize_location">Visualizar localização</string>

    <string name="text_start">Iniciar</string>
    <string name="text_pause">Pausar</string>
    <string name="text_resume">Retomar</string>
    <string name="text_stop">Parar</string>
    <string name="text_back">Voltar</string>

    <string name="text_default">Default</string>

    <string name="text_without_information">Não há informações</string>
    <string name="text_availables">disponíveis</string>
    <string name="text_without_activities">Não há atividades</string>
    <string name="text_information_activities">Clique em “Gravar”</string>
    <string name="text_information_activities_2">e inicie uma atividade!</string>

    <string name="text_welcome">Bem vindo</string>
    <string name="text_login">Monitore e analise<br></br>suas <b>estatísticas</b> de<br></br>desempenho <b>favoritas</b></string>
    <string name="text_like">Curtido por<b> 300 pessoas</b></string>
    <string name="bem_vindo"><b>Bem vindo!</b></string>
    <string name="google_sign_up">Continuar com o Google</string>

    <string name="connected_person">pessoa conectada</string>
    <string name="connected_persons">pessoas conectadas</string>

    <string name="image_user_information">Imagem de perfil do usuário</string>

    <string name="information_user_auth">Exibe localização do usuário autenticado.</string>

    <string name="information_geofire_user_added">Usuário adicionado com sucesso. Chave: </string>
    <string name="information_geofire_user_added_error">Erro ao adicionar usuário: Erro: </string>
    <string name="information_geofire_on_key_entered">Usuário %s buscou nas coordenadas: [%f,%f]</string>
    <string name="information_geofire_on_key_exited">Usuário %s não está na área filtrada</string>

    <string name="geofire_route">geo/providers</string>
    <string name="btn_update_profile">Editar perfil</string>
    <string name="autentication">Autenticar</string>
    <string name="register">Registrar-se</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>