<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_route">

    <fragment
        android:id="@+id/navigation_route"
        android:name="com.example.geolocation.activities.route.RouteFragment"
        android:label="@string/title_fragment_route"
        tools:layout="@layout/fragment_route" />

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.example.geolocation.activities.record.RecordFragment"
        android:label="@string/title_fragment_record"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.example.geolocation.activities.friends.FriendsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.geolocation.activities.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" >
        <action
            android:id="@+id/action_navigation_user_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.geolocation.activities.user.UserProfileFragment"
        android:label="UserProfileFragment" />

</navigation>