<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/frame_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/image_current_route"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/content_image_walking"
            android:src="@drawable/icon_walking" />

        <TextView
            android:id="@+id/tv_current_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_walking"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_start_date_current_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/text_current_date"
            android:textAlignment="textEnd"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame_informations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16sp"
        android:layout_weight="3"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="67dp">

        <LinearLayout
            android:id="@+id/frame_item_distance"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_label_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/text_distance"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_value_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/text_default_elapsed_distance"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frame_item_time"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_label_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/text_time"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_value_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/text_default_elapsed_time"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frame_item_average_speed"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_label_average_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/text_average_speed"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_value_average_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/text_default_elapsed_average_speed"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:bottomLeftRadius="10dp"
            android:bottomRightRadius="10dp"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            app:mapbox_cameraZoom="13" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/frame_item_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_likes"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_like"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView_like"
            android:layout_width="40dp"
            android:layout_height="63dp"
            android:layout_marginStart="30dp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_like"
            tools:ignore="UseAppTint" />

        <ImageView
            android:id="@+id/imageView_comment"
            android:layout_width="40dp"
            android:layout_height="63dp"
            android:layout_marginStart="10dp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_comment"
            tools:ignore="UseAppTint" />

        <ImageView
            android:id="@+id/imageView_forward"
            android:layout_width="40dp"
            android:layout_height="63dp"
            android:layout_marginStart="10dp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_forward"
            tools:ignore="UseAppTint" />

    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="fill_parent"
        android:layout_marginTop="15dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        android:focusable="false" />

</LinearLayout>