<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <LinearLayout
            android:id="@+id/frame_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/image_current_route"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:contentDescription="@string/content_image_walking"
                android:src="@drawable/icon_walking" />

            <TextView
                android:id="@+id/tv_current_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/text_walking"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_start_date_current_route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/text_current_date"
                android:textAlignment="textEnd"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            android:focusable="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/frame_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/text_time"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <Chronometer
                    android:id="@+id/chronometer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/text_default_time"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorBlack"
                    android:textSize="40sp" />


                <!--                <TextView-->
<!--                    android:id="@+id/tv_value_time"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="20dp"-->
<!--                    android:fontFamily="@font/poppins_bold"-->
<!--                    android:text="@string/text_default_time"-->
<!--                    android:textAlignment="textEnd"-->
<!--                    android:textColor="@color/colorBlack"-->
<!--                    android:textSize="40sp" />-->
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLight2"
                android:focusable="false" />

            <LinearLayout
                android:id="@+id/frame_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/text_distance"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/frame_value_distance"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_value_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/text_default_distance"
                        android:textColor="@color/colorBlack"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/tv_unity_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/text_unity_distance"
                        android:textColor="@color/colorBlack"
                        android:textSize="25sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLight2"
                android:focusable="false" />

            <LinearLayout
                android:id="@+id/frame_average_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_average_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/text_average_speed"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/frame_value_average_speed"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_value_average_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/text_default_average_speed"
                        android:textColor="@color/colorBlack"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/tv_unity_average_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/text_unity_average_speed"
                        android:textColor="@color/colorBlack"
                        android:textSize="25sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLight2"
                android:focusable="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="25dp">

            <Button
                android:id="@+id/btn_visualize_location"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="25dp"
                android:background="@drawable/secondary_button"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textCapSentences"
                android:text="@string/text_visualize_location"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/frame_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/customize_buttom"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textCapSentences"
                    android:text="@string/text_pause"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/customize_buttom"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textCapSentences"
                    android:text="@string/text_stop"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</ScrollView>